--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
 -->
 <html>
 	<head>
@@ -31,7 +28,7 @@ Introduction to Information Technology
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">You May Find Interesting</a></li>
+						<li><a href="#one" class="active">About ME</a></li>
 						<li><a href="#two">Interest in IT</a></li>
 						<li><a href="#three">Ideal Job</a></li>
 						<li><a href="#four">Personal Profile</a></li>
@@ -75,7 +72,7 @@ Introduction to Information Technology
 									<h3>Interest in IT</h3>
 									<p><b>What is your interest in IT? When did your interest in IT start? Was there a particular event or person that sparked your interest? Outline your IT experience (if any).</b></p>
 
-<p>IT is an ever-evolving industry and what it is now is completely different to what it was 10 years ago. Our lives are affected by IT every day, whether it be our smart phones sending a notification to us sitting down in front of the TV watching Netflix. It’s this kind of innovation that interests me and what will come in the future.
+<p>IT is an ever-evolving industry and what it is now is completely different to what it was 10 years ago. Our lives are affected by IT every day, whether it be our smart phones sending a notification or sitting down in front of the TV watching Netflix. It’s this kind of innovation that interests me and what will come in the future.
 
 I was initially interested in IT as a high school student while taking computing classes. However, as my life evolved and started to include new activities, my interest took a back seat to everyday life goals and needs.
 
@@ -85,15 +82,11 @@ I have no professional experience in IT outside of being an end user.</p>
 
 <p><b>Why did you choose to come to RMIT?</b></p>
 
-I chose RMIT as it had more flexible study options through Open Universities. I also know RMIT is considered one of the top universities when it comes to IT studies.
+<p>I chose RMIT as it had more flexible study options through Open Universities. I also know RMIT is considered one of the top universities when it comes to IT studies.</p>
 
+<p><b>What do you expect to learn during your studies?</b></p>
 
-
-
-
-What do you expect to learn during your studies?
-
-My aim is to learn and to take in as much as I can during my studies so I can determine where I may be best suited to pursue a niche interest within the IT industry.
+<p>My aim is to learn and to take in as much as I can during my studies so I can determine where I may be best suited to pursue a niche interest within the IT industry.
 </p>
 
 								</div>
@@ -115,13 +108,13 @@ My aim is to learn and to take in as much as I can during my studies so I can de
 											<a href="https://www.seek.com.au/job/51742510?type=standout#searchRequestToken=5bb44240-5c6e-4698-8d4b-7b92d1ad6fdb" class="image"><img src="images/Joblink.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Description of skills, qualifications, and experience required</h4>
-												<p>The Citadel Group would ideally like someone who is interested in the cyber security field of IT with a strong understanding of IT systems as well as networking and security concepts. Someone who is may have been in a management or supervisory role would be of benefit as junior staff may need mentoring. Written and verbal skills are required as is the need to communicate effectively with other teams and customers.</p>
+												<p>The Citadel Group would ideally like someone who is interested in the cyber security field of IT with a strong understanding of IT systems as well as networking and security concepts. Someone who may have been in a management or supervisory role would be of benefit as junior staff may need mentoring. Written and verbal skills are required as is the need to communicate effectively with other teams and customers.</p>
 
 <p>Further experience with the following software would be ideal, Elastic, Azure and EndGame. As well as knowledge and experience in security operations, SIEM, endpoint detection, threat hunting, security sandbox technologies, forensics, reverse engineering, firewalls, content filtering, file monitoring technologies, information software and software development.</p>
 
 <p>Qualifications required for the above role would include a Bachelor in IT specialising in cyber security and software development and certifications including; SANS GCIA / SANS GCIH / SANS GPEN / CISSP / OSCP would go a long way in being considered for this role.</p>
 <h4>Description of skills, qualifications and experience I currently have.</h4>
-<p>I currently do not have the technical skills or knowledge required for this position; however, I do have excellent verbal and written communication skills and interpersonal skills which would allow me to liaise with my peers and customers in an effective manner.<p>I believe this to be true as I currently hold a management position in my current work industry where I supervise junior staff as well as train in specialised skills and I have previously held a position where communicating various stakeholders was part of my role. </p>
+<p>I currently do not have the technical skills or knowledge required for this position; however, I do have excellent verbal and written communication skills and interpersonal skills which would allow me to liaise with my peers and customers in an effective manner.<p>I believe this to be true as I currently hold a management position in my current work industry where I supervise junior staff as well as train in specialised skills and I have previously held a position where communicating to various stakeholders was part of my role. </p>
 <h4>A plan describing how I will obtain the skills, qualifications and experience required for the position. </h4>
 <p>In order to achieve my goal as a Cyber Security Analyst with The Citadel Group, I will need to firstly complete my Bachelor of IT through RMIT with a focus on cyber security and software development. By doing this initial step I will have a good grounding of the IT industry and the required skills to develop my experience for the role. The next step would be to further my skill set and training by enrolling in the required courses to obtain the certificates outlined in the job description. This would then require continued upskilling to ensure certification remained up to date. </p>
 
@@ -165,7 +158,7 @@ My aim is to learn and to take in as much as I can during my studies so I can de
 
 <p><b>How do you think these results may influence your behaviour in a team?</b></p>
 
-<p>I’m very relaxed and bring a calming energy when at work which helps others relax and to get on with the task with minimal stress. I can also lift energies when required to help build excitement traction when a task gets repetitive and boring. My behaviour is not influenced by the team I am in as I act the same in most situations. </p>
+<p>I’m very relaxed and bring a calming energy when at work which helps others relax and to get on with the task with minimal stress. I can also lift energies when required to help build excitement and traction when a task gets repetitive and boring. My behaviour is not influenced by the team I am in as I act the same in most situations. </p>
 
 <p><b>How should you take this into account when forming a team?</b></p>
 
@@ -188,7 +181,7 @@ My aim is to learn and to take in as much as I can during my studies so I can de
 
 <p><b>How do you think these results may influence your behaviour in a team?</b></p>
 
-<p>As I do prefer to be hands on and learn as I do, I may find it difficult to process some information when working in a team remotely. It means I need to be more aware and focused on my actions, so I do not miss information that my team conveys to me. </p>
+<p>As I do prefer to be hands on and learn as I go, I may find it difficult to process some information when working in a team remotely. It means I need to be more aware and focused on my actions, so I do not miss information that my team conveys to me. </p>
 
 <p><b>How should you take this into account when forming a team?</b></p>
 
@@ -207,17 +200,17 @@ My aim is to learn and to take in as much as I can during my studies so I can de
 	<p>Drive Aware will be a mobile app available through the Apple App Store which professional drivers, (e.g., long haul truck drivers) and their employers will use to track fatigue indicators and warn of fatigue caused by long periods of sustained driving.  The mobile app will work in conjunction with a wearable smart device that will be designed as part of the project. Drive Aware will provide real time monitoring and observe and track vital signs of its users which will include heart rate, O2 levels in the blood stream, body temperature, and respiration rate. The front facing camera of the iPhone will also be utilised to monitor eye movement, yawning, user alertness and head positioning with the help of AI technology.</p>
 
 	<p>According to the Western Australian Road Safety Commission; in 2018 there were 15 fatigue related fatalities on their roads. (Safety, 2021) and a total of 1135 road user deaths in Australia of that same year. (Road deaths road users, 2021)</p>
-<p>“Without truck drivers, Australia stops” has been a long-held mantra within the transport industry, but it is this mantra that has caused drivers and operators to push their limits and their safety by driving and operating under fatigue caused by tiredness. By developing a mobile app and wearable tech that can track a driver’s vital signs. The motivation behind Drive Aware is to help decrease deaths of road users cause by fatigue and driving tired.  </p>
+<p>“Without truck drivers, Australia stops” has been a long-held mantra within the transport industry, but it is this mantra that has caused drivers and operators to push their limits and their safety by driving and operating under fatigue caused by tiredness. By developing a mobile app and wearable tech that can track a driver’s vital signs, the motivation behind Drive Aware is to help decrease deaths of road users cause by fatigue and driving tired.  </p>
 <p>Drive Aware will be a mobile app that will be used in conjunction with a smart wearable device which will provide real time monitoring of its users’ vital signs. It will also visually monitor the user to determine signs of fatigued based off eye movement, yawning, alertness and head positioning by using the front facing camera of the iPhone. AI technology will be utilised to learn a user’s vital base levels and body positioning to help alleviate false readings.  </p>
 <p>Employers will have the functionality to access real time data of their drivers through the app as well as access the live video and audio stream provided by the front facing iPhone camera, with the iPhone to be placed on a purpose built base located on the dashboard of the vehicle.</p>
 <p>The smart wearable device located around the wrist of the user will be powered by a rechargeable lithium battery and have 4 embedded sensors that will each monitor different vital signs: heart rate, O2 levels in the blood stream, body temperature and respiration rate.</p>
 <p>With the integration of AI technology, vital base levels will be learnt of each user. This information can be used to set alerts and alarms to notify the user of signs of fatigue or falling asleep while driving. Alerts and alarms will also be received by staff that are monitoring the user in real time, who can then contact the driver directly through the app with the two-way microphone feature.</p>
 <p>In the case of a crash, a fifth sensor will be activated which will enable the app to contact emergency services and provide location details with the help of the iPhones GPS system.</p>
 <p>All data received by Drive Aware will be encrypted and stored using a subscription based cloud service with access to be determined by the end user.</p>
-<p>The Drive Aware app will need to be developed and written in a yet to be determined code language, however if a service such as MIT App Inventor could be utilised; that would be preferred.  Existing hardware to be used is the Apple iPhone and new hardware will need to be designed in the form of the wearable smart device around the users’ wrist. A suitable charging and docking system will need to be designed to enable dashboard placement, with MagSafe technology preferred for newer iPhones.  Suitable material for the wearable device would need to be investigated and prototyped to ensure ergonomics and comfortability is optimised.</p>
+<p>The Drive Aware app will need to be developed and written in a yet to be determined code language, however if a service such as MIT App Inventor could be utilised; that would be preferred.  Existing hardware to be used is the Apple iPhone and new hardware will need to be designed in the form of the wearable smart device worn around the users’ wrist. A suitable charging and docking system will need to be designed to enable dashboard placement, with MagSafe technology preferred for newer iPhones.  Suitable material for the wearable device would need to be investigated and prototyped to ensure ergonomics and comfortability is optimised.</p>
 <p>Skills and tools that will be required will include coding of the app, interface design, software integration to Apple iOS and hardware integration, AI technology, hardware development of wearable tech and design including sensor development.</p>
 <p>I believe the feasibility of this project is high as the skill, software and hardware is already in use within IT. It will be the integration of all elements which will be the difficult step, however it is achievable.</p>
-<p>The outcome of a successful project will be safer roads and fewer deaths of road users due to driver fatigue. Drive Aware will provide education and awareness to drivers and the transport industry as a whole of the effects of driving tired. It will empower users to make smarter decisions about their driving habits and provide a greater responsibility to driver safety to employers as they have the tools collect data and monitor operations in real time.</p>
+<p>The outcome of a successful project will be safer roads and fewer deaths of road users due to driver fatigue. Drive Aware will provide education and awareness on the effects of driver fatigue to drivers and to the industry as a whole. It will empower users to make smarter decisions about their driving habits and provide a greater responsibility to driver safety by employers as they have the tools collect data and monitor operations in real time.</p>
 
 
 
