--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Introduction to Information Technology
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About ME</a></li>
+						<li><a href="#one" class="active">About Me</a></li>
 						<li><a href="#two">Interest in IT</a></li>
 						<li><a href="#three">Ideal Job</a></li>
 						<li><a href="#four">Personal Profile</a></li>
@@ -56,7 +56,7 @@ Introduction to Information Technology
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>You May Find Interesting</h2>
+										<h2>About Me</h2>
 
 									</header>
 									<p>I am a trade qualified baker of 15 years, specialising in sourdough bread. I prefer to make sourdough bread as it is very hands on and typically does not rely on machines such as dough moulders.</p>
